--- a/index.html
+++ b/index.html
@@ -12,39 +12,9 @@
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="tabs">
-				<h3 class="active">Tab 1</h3>
-				<h3>Tab 2</h3>
-				<h3>Tab 3</h3>
-				<h3>Tab 4</h3>
-			</div>
-			<div class="tab-content">
-				<div class="active"> <!--First--->
-					<h4>Acodontaster</h4>
-					<p> Acodontaster is a genus of starfish in the family Odontasteridae. Members of the genus are found in the Southern Ocean, in the waters off Antarctica and the island groups nearby. Acodontaster elongatus is additionally found further north in the Atlantic Ocean on the eastern seaboard of South America.
-					</p>
-				</div>
+		<vertical-tabs-panel></vertical-tabs-panel>
 
-				<div> <!--Second--->
-					<h4>Suribachi</h4>
-					<p> Suribachi (擂鉢, lit. "grinding-bowl") and surikogi (擂粉木, lit. "grind-powder-wood") are a Japanese mortar and pestle. These mortars are used in Japanese cooking to crush different ingredients such as sesame seeds.
-					</p>
-				</div>
-
-				<div> <!--Third--->
-					<h4>Blood of Jesus Christ (military order)</h4>
-					<p>Blood of Jesus Christ, or Blood of Christ, was a military order instituted at Mantua by Vincenzo I Gonzaga, Duke of Mantua, approved on 25 May 1608 by Pope Paul V. The motto of the order was Domine probasti me, or that Nihil hoc triste recepto. Jean Hermant speaks of the order and observes that it took its name from some drops of the blood of Jesus, said to have been preserved in the cathedral church of Mantua. Their number was restricted to twenty besides the Grand Master; the office whereof was attached to himself and his successors.
-					</p>
-				</div>
-
-				<div> <!--Fourth--->
-					<h4>Set theory</h4>
-					<p> Set theory is the branch of mathematical logic that studies sets, which can be informally described as collections of objects. Although objects of any kind can be collected into a set, set theory — as a branch of mathematics — is mostly concerned with those that are relevant to mathematics as a whole.
-					</p>
-				</div>
-			</div>
-		</div>
-	<script src="script.js"></script>
+		<!--Scripts--->
+		<script type="module" src="./script.js"></script>
 	</body>
 </html>
