Create a custom element for tab 1

--- a/VerticalTabsPanel.html
+++ b/VerticalTabsPanel.html
@@ -6,11 +6,7 @@
 				<h3>Tab 4</h3>
 			</div>
 			<div class="tab-content">
-				<div class="active"> <!--First--->
-					<h4>Acodontaster</h4>
-					<p> Acodontaster is a genus of starfish in the family Odontasteridae. Members of the genus are found in the Southern Ocean, in the waters off Antarctica and the island groups nearby. Acodontaster elongatus is additionally found further north in the Atlantic Ocean on the eastern seaboard of South America.
-					</p>
-				</div>
+				<tab-content-1 class="active"></tab-content-1>
 
 				<div> <!--Second--->
 					<h4>Suribachi</h4>
