--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 
 		<!--Scripts--->
 		<script type="module" src="./script.js"></script>
+		<script type="module" src="./tab1/tab-content-1.js"></script>
 	</body>
 </html>
