Create modules for the tabs and fix styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 		<!--Scripts--->
 		<script type="module" src="./script.js"></script>
-		<script type="module" src="./tab1/tab-content-1.js"></script>
+		<script type="module" src="./tabScripts/tab-content-1.js"></script>
+		<script type="module" src="./tabScripts/tab-content-2.js"></script>
+		<script type="module" src="./tabScripts/tab-content-3.js"></script>
+		<script type="module" src="./tabScripts/tab-content-4.js"></script>
 	</body>
 </html>
