--- a/VerticalTabsPanel.html
+++ b/VerticalTabsPanel.html
@@ -6,24 +6,9 @@
 				<h3>Tab 4</h3>
 			</div>
 			<div class="tab-content">
-				<tab-content-1 class="active"></tab-content-1>
-
-				<div> <!--Second--->
-					<h4>Suribachi</h4>
-					<p> Suribachi (擂鉢, lit. "grinding-bowl") and surikogi (擂粉木, lit. "grind-powder-wood") are a Japanese mortar and pestle. These mortars are used in Japanese cooking to crush different ingredients such as sesame seeds.
-					</p>
-				</div>
-
-				<div> <!--Third--->
-					<h4>Blood of Jesus Christ (military order)</h4>
-					<p>Blood of Jesus Christ, or Blood of Christ, was a military order instituted at Mantua by Vincenzo I Gonzaga, Duke of Mantua, approved on 25 May 1608 by Pope Paul V. The motto of the order was Domine probasti me, or that Nihil hoc triste recepto. Jean Hermant speaks of the order and observes that it took its name from some drops of the blood of Jesus, said to have been preserved in the cathedral church of Mantua. Their number was restricted to twenty besides the Grand Master; the office whereof was attached to himself and his successors.
-					</p>
-				</div>
-
-				<div> <!--Fourth--->
-					<h4>Set theory</h4>
-					<p> Set theory is the branch of mathematical logic that studies sets, which can be informally described as collections of objects. Although objects of any kind can be collected into a set, set theory — as a branch of mathematics — is mostly concerned with those that are relevant to mathematics as a whole.
-					</p>
-				</div>
+				<tab-content-1 class="custom-tab active"></tab-content-1>
+				<tab-content-2 class="custom-tab"></tab-content-2>
+				<tab-content-3 class="custom-tab"></tab-content-3>
+				<tab-content-4 class="custom-tab"></tab-content-4>
 			</div>
 		</div>
